--- a/trunk/report.bib
+++ b/trunk/report.bib
@@ -273,6 +273,23 @@
  issn = {1392-1215},
 } 
 
+%z15
+
+@inproceedings{DBLP:conf/icra/LenainTHM11,
+  author    = {Roland Lenain and
+               Benoit Thuilot and
+               Oliver Hach and
+               Philippe Martinet},
+  title     = {High-speed mobile robot control in off-road conditions:
+               A multi-model based adaptive approach},
+  booktitle = {ICRA},
+  year      = {2011},
+  pages     = {6143-6149},
+  ee        = {http://dx.doi.org/10.1109/ICRA.2011.5979664},
+  crossref  = {DBLP:conf/icra/2011},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
 %There exists no eletronic version
 
 @phdthesis{Elfes:1989:OGP:916528,
